More space for album art - fixes overlap in android

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -39,7 +39,7 @@ html {
 
 #album {
 	width: 100%;
-	height: 55%;
+	height: 60%;
 	margin: 0px;
 }
 
